[package]
name = "tracing_span_activity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["log", "log-always"] } 
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# fmt examples
snafu = "0.6.10"
thiserror = "1.0.26"
